name:                tce-time
version:             1.0
synopsis:            Utility and conversion functions for working with time and date
description:         Please see README.md
homepage:            
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2017 Dino Morelli
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     stack.yaml

library
   hs-source-dirs:   src
   exposed-modules:  Foo
   ghc-options:      -Wall -fwarn-tabs
   default-language: Haskell2010
   build-depends:      base >= 4.7 && < 5

test-suite tests
   hs-source-dirs:   testsuite
   main-is:          tests.hs
   ghc-options:      -Wall -fwarn-tabs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   build-depends:      base >= 4.7 && < 5
                     , tce-time
   other-modules:    Foo
