name:                tce-time
version:             1.0
synopsis:            Utility and conversion functions for working with time and date
description:         Please see README.md
homepage:            https://github.com/dino-/tce-time.git
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2017 Dino Morelli
category:            Time
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     stack.yaml

source-repository head
   type: git
   location: https://github.com/dino-/tce-time.git

library
   hs-source-dirs:   src
   exposed-modules:  TCE.Data.Time.Epoch
                     TCE.Data.Time.Milli
   ghc-options:      -Wall -fwarn-tabs
   default-language: Haskell2010
   build-depends:      base >= 4.7 && < 5
                     , time

test-suite tests
   hs-source-dirs:   tests, src
   main-is:          tests.hs
   ghc-options:      -Wall -fwarn-tabs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
   build-depends:      base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , tce-time
                     , time
   other-modules:    TCE.Data.Time.Epoch
                     TCE.Data.Time.Milli
                     TCE.Test.BoundedInteger
                     TCE.Test.Data.Time.Epoch
                     TCE.Test.Data.Time.Milli
